src/objects/Dealer__c.object
<CustomObject>
    <description>Contains Dealer&apos;s Info</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Dealer Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealer</label>
    <nameField>
        <label>Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>